Fix file browser sorting using headers

BUG:226941